crates/plotnik-tests/tests/04-emit/bytecode/anchors/exact_anchor_before_group.txt
Q = (function_declaration
  .!
  {(identifier) @n}
)
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), no `function_declaration` places this child first; a `function_declaration` begins with `"async"` or `"function"`
 --> query.ptk:1:6
  |
1 | Q = (function_declaration
  |      ^^^^^^^^^^^^^^^^^^^^
  |
help: `.!` allows no syntax-tree node in its gap — not even an anonymous token or comment; the soft anchor `.` skips those: `(function_declaration
        .
        {(identifier) @n}
      )`
